--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,16 @@
 body{
-  background: teal;
+  /* background: teal; */
+  --stripe: #dfd8dc;
+  --bg: #ffffff;
+
+  background: linear-gradient(135deg, var(--bg) 25%, transparent 25%) -50px 0,
+    linear-gradient(225deg, var(--bg) 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, var(--bg) 25%, transparent 25%),
+    linear-gradient(45deg, var(--bg) 25%, transparent 25%);
+  background-size: 100px 100px;
+  background-color: var(--stripe);
 }
+
 h1{
   font-family: sans-serif;
   font-size: 3em;
